public interface Media {


    // Hvad ska disse to metoder retunere? en string stedet for void? så der stor media is playing osv?
    // Hvis det skal ændres så husk også at gøre det i de andre klasser
    // og skal de være abstrakt?
    public String playMedia();

    public String stopMedia();

}
