
@startuml
!pragma layout smetana
'https://plantuml.com/sequence-diagram

Class Main{
+ static void main()

}

Class startMenu{
+ signUp()
+ logIn()
+@override String toString()

}

Class user{
-String userName;
-String passWord;

+createUserName()
+createPassWord()
+getuserName()
+getpassWord()
+@override String toString()

}

Class TextUI {
-Scanner scanner;

}

Class FileIo{


}

Class mainMenu{
-ArrayList movies;
-ArrayList series;

+setUp()
+searchMedia()
+Search category()
+getMovies()
+getSeries()
+@override String toString()

}

Class myList{
+watchedMedia()
+savedMedia()
+@override String toString()
}

interface Media{
+playMedia()
+stopMedia()

}

abstract class AMedia extends Media{
-String name;
-int releaseYear;
-int rating;
-String category;

+@override playMedia()
+@override stopMedia()
+getName()
+getReleaseYear()
+getRating()
+getCategory()
+@override String toString()


}

Class Movies extends AMedia{
-String name;
-int releaseYear;
-int rating;
-String category;
-ArrayList<Movies> arrayListForMovies;

+@override playMedia()
+@override stopMedia()
+void addMovie()
+ChooseMovie()
+@override String toString()

}

Class Series extends AMedia{
-String name;
-int releaseYear;
-int rating;
-String category;
-ArrayList<Series> arrayListForSeries;

+@override playMedia()
+@override stopMedia()
+Void addSeries()
+ChooseSeries()
+@override String toString()

}


Main --* startMenu
startMenu --* user
user --* mainMenu
user --* myList
FileIo --* mainMenu
user--* TextUI
mainMenu --* Movies
mainMenu --* Series
myList --|> Movies
myList --|> Series
mainMenu --* Media
TextUI --* mainMenu

@enduml